# authenticator-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: authenticator.rs  lib.rs
