[package]
name = "authenticator-rs"
version = "0.2.0"
edition = "2021"

description = "The rust implementation for google authenticator with 2fa authentication"
authors = ["evanyang1120@163.com"]
homepage = "https://github.com/CrayfishGo/authenticator-rs.git"
license = "MIT"
keywords = ["2fa", "otp"]
categories = ["Cryptography"]
readme = "README.md"
documentation = "https://docs.rs/authenticator-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.1"
base32 = "0.4.0"
ring = "0.16.20"
percent-encoding = "2"

